Adding in the paragraph that asks for the compare and contrast.

--- a/labs/lab4/cs440S2014-lab4.tex
+++ b/labs/lab4/cs440S2014-lab4.tex
@@ -103,7 +103,9 @@ assignment, you should consider the use of operating system tools that you can u
 the multi-threaded producer-consumer model.
 
 Take some time to compare and contrast the two producer-consumer models that you have implemented in these two
-laboratory assignments.
+laboratory assignments. After studying the source code of both implementations, you should think about the similarities
+and differences that they exhibit.  Which one do you think is easier to implement, test, and maintain? Which one is more
+likely to lead to a defective implementation? How did you arrive at these conclusions?
 
 \section*{Summary of the Required Deliverables}
 
