Finished the first full draft of the fourth laboratory assignment.

--- a/labs/lab4/cs440S2014-lab4.tex
+++ b/labs/lab4/cs440S2014-lab4.tex
@@ -111,14 +111,17 @@ likely to lead to a defective implementation? How did you arrive at these conclu
 
 This assignment invites you to submit printed and signed versions of the following deliverables: 
 
-\begin{enumerate} \item A paragraph that explains how multi-threaded Java programs use {\tt synchronized} \item A
-    detailed discussion of the execution behavior of a multi-threaded Java program \item A comprehensive analysis of the
-    output of each defective multi-threaded Java program \item The report from an experimental study that characterizes
-    the performance of the model \end{enumerate}
+\begin{enumerate}
 
-Students are strongly encouraged to write their laboratory report in \LaTeX~and use tools such as the R language for
-statistical computation to better analyze and visualize the empirical results. Please see the instructor if you have
-questions about the requirements for these deliverables.
+  \item A clear description of the term semaphore, with comments about the its historical origins 
+
+  \item A revised and extended implementation of the producer-consumer model
+
+  \item A comprehensive analysis of the output of each defective multi-threaded Java program
+
+  \item A reflection of the characteristics of the two different producer-consumer models
+
+\end{enumerate}
 
 In adherence to the honor code, students should complete this assignment on an individual basis. While it is appropriate
 for students in this class to have high-level conversations about the assignment, it is necessary to distinguish
