Adding in the content for the first question.

--- a/exams/exam1_2013.tex
+++ b/exams/exam1_2013.tex
@@ -98,33 +98,21 @@ responsible for checking the white board for status updates.
 
 \begin{enumerate}
   
-\item ({\bf 10 Points}) In {\em The Mythical Man Month} Frederick Brooks identifies some of the fundamental challenges
-  associated with the engineering of computer software.  Answer the following questions about the concepts developed by
-  Brooks.
+\item ({\bf 10 Points}) The operating system is a resource manager for the hardware provided by the computer.  Answer
+  the following questions about the management of computer hardware.
 
   \begin{enumerate}
           
-  \item ({\bf 6 Points}) One of the most challenging tasks associated
-    with implementing a software system is managing the software
-    development team.  Brooks presents several graphs that contain
-    ``People'' on the horizontal axis and ``Months'' on the vertical
-    one.  What does a curve on this graph look like if $\ldots$
-
-    \begin{enumerate}
-
-      \item ({\bf 3 Points}) $\ldots$ a task is perfectly partitionable?
-    
-      \item ({\bf 3 Points}) $\ldots$ a task is not partitionable at all?
-
-    \end{enumerate}
-
-  \item ({\bf 4 Points}) Using his experience at IBM as a foundation
-    for his ideas, Brooks describes the complete evolution of a
-    programming systems product.  Using a diagram with four distinct
-    quadrants, please describe the full transformation of a program
-    into a programming systems product.  Please make sure that your
-    diagram clearly explains the cost overheads associated with this
-    transformation.
+  \item ({\bf 2 Points}) The computer contains resources that must be shared through either time or space multiplexing.
+    What are these two types of multiplexing? What is an example of a resource that can be shared with each of these
+    methods?
+   
+  \item ({\bf 5 Points}) A typical memory hierarchy contains five levels.  Arrange the levels of the memory hierarchy so
+    that the fastest and smallest type of memory is at the top of your diagram and the slowest and largest is at the
+    bottom.
+  
+  \item ({\bf 3 Points}) There are three canonical strategies for performing input and output with the
+    kernel and device drivers.  What are these strategies? What are their trade-offs?
 
   \end{enumerate}
         
@@ -133,8 +121,8 @@ responsible for checking the white board for status updates.
 \begin{figure}[t]
 \centering
 \includegraphics{fig1-27}
-\caption{The Initial Stages of the Bully Algorithm.}
-\label{figure:bully}
+\caption{Client Server Communication Involving Both the Client and the Kernel.}
+\label{fig:clientserver}
 \end{figure}
 
 \item ({\bf 10 Points}) In {\em The Mythical Man Month} Frederick Brooks identifies some of the fundamental challenges
