--- a/exams/exam1_2013.tex
+++ b/exams/exam1_2013.tex
@@ -12,7 +12,7 @@
 \usepackage{mathptmx}
 
 \usepackage{graphics}
-
+\usepackage{pifont}
 \setcounter{secnumdepth}{3}
 \setcounter{tocdepth}{3}
 
@@ -57,6 +57,12 @@
 \definecolor{javagreen}{rgb}{0.25,0.5,0.35} % comments
 \definecolor{javapurple}{rgb}{0.5,0,0.35} % keywords
 \definecolor{javadocblue}{rgb}{0.25,0.35,0.75} % javadoc
+
+\newcommand*\yes{\item[\Checkmark]}
+\newcommand*\yesplus{\item[\Checkmark$^{+}$]}
+\newcommand*\yesminus{\item[\Checkmark$^{-}$]}
+
+\newcommand*\no{\item[\small{\XSolidBrush}]}
 
 \begin{document}
 
@@ -107,9 +113,9 @@ responsible for checking the white board for status updates.
     What are these two types of multiplexing? What is an example of a resource that can be shared with each of these
     methods?
    
-  \item ({\bf 5 Points}) A typical memory hierarchy contains five levels.  Arrange the levels of the memory hierarchy so
-    that the fastest and smallest type of memory is at the top of your diagram and the slowest and largest is at the
-    bottom.
+  \item ({\bf 5 Points}) A typical memory hierarchy normally contains five levels.  Arrange the levels of the memory
+    hierarchy so that the fastest and smallest type of memory is at the top of your diagram and the slowest and largest
+    is at the bottom.
   
   \item ({\bf 3 Points}) There are three canonical strategies for performing input and output with the
     kernel and device drivers.  What are these strategies? What are their trade-offs?
@@ -143,8 +149,8 @@ responsible for checking the white board for status updates.
       {\tt cat file1 file2 file3 | sort > /dev/lp \&}
     \end{quote}
 
-  \item ({\bf 3 Points}) Figure~\ref{fig:clientserver} furnishes an example of a client communicating with the server
-    with the support of the operating system kernel. Please outline all of the steps that must take place to support the
+  \item ({\bf 3 Points}) Figure~\ref{fig:clientserver} furnishes an example of client-server communication with the
+    support of the operating system kernel. Please outline all of the steps that must take place to support the
     communication between ``Machine 1'' and ``Machine 2''. 
 
   \end{enumerate}
@@ -166,8 +172,8 @@ responsible for checking the white board for status updates.
       and monolithic kernels. Using a properly labeled diagram for each definition, explain these types of kernels. What
       are their strengths and weaknesses?
 
-    \item ({\bf 2 Points}) When implementing the process scheduler for the kernel, it is normally useful to separate
-      policy and mechanism.  What does this maxim mean? \mbox{Why is it important}?
+    \item ({\bf 2 Points}) When implementing the process scheduler for the kernel, it is normally useful to ``separate
+      policy and mechanism''.  What does this maxim mean? \mbox{Why is it important}?
 
   \end{enumerate}
 
@@ -181,7 +187,7 @@ responsible for checking the white board for status updates.
     \item ({\bf 4 Points}) There are four events that can lead to the creation of a process. \mbox{What are they}?
 
     \item ({\bf 4 Points}) A process can be in one of three states: running, blocked, and ready. Using circles to
-      represent each of these states and directed edges to denote transitions between these states, draw a process state
+      represent each of these states and directed edges to denote transitions between these states, draw a process-state
       diagram. All states and edges must have labels.
 
     \item ({\bf 2 Points}) The operating system maintains a process table that stores information about each process
@@ -206,34 +212,37 @@ responsible for checking the white board for status updates.
 
 \begin{enumerate}
 
-  \item Figure~\ref{fig:pandt} shows two different canonical configurations of processes and threads. Answer the
-    following questions about the trade-offs that are evident in this diagram.
+  \item ({\bf 5 Points}) Figure~\ref{fig:pandt} shows two different canonical configurations of processes and threads. Answer the
+    following questions about the trade-offs evident in this diagram.
 
     \begin{enumerate}
 
-      \item ({\bf 5 Points}) Describe a scenario in which Figure~\ref{fig:pandt}(a) is:
+      \item Describe a scenario in which Figure~\ref{fig:pandt}(a) is:
 
-        \begin{enumerate}
+        \begin{itemize}
 
           \item A good option for concurrent execution
           \item A poor option for concurrent execution
 
-        \end{enumerate}
+        \end{itemize}
 
       \item Describe a scenario in which Figure~\ref{fig:pandt}(b) is:
 
-        \begin{enumerate}
+        \begin{itemize}
 
           \item A good option for concurrent execution
           \item A poor option for concurrent execution
 
-        \end{enumerate}
+        \end{itemize}
 
-      \item ({\bf 5 Points}) Many kernel-mode and user-mode programs contain critical region(s) that represent code
-        segments that must be executed in mutual exclusion.  What is mutual exclusion? What are the four conditions that
-        must be supported by any technique that aims to enforce mutual exclusion for a program's critical region?
+      \item If you were designing an operating system that could only support one of these models, which would you pick?
+        Please justify your response to this question.
 
     \end{enumerate}
+
+  \item ({\bf 5 Points}) Many kernel-mode and user-mode programs contain critical region(s) representing code
+    segments that must be executed in mutual exclusion.  What is mutual exclusion? What are the four conditions that
+    must be supported by any technique that aims to enforce mutual exclusion for a program's critical region?
 
 \end{enumerate}
 
