--- a/labs/lab5/cs440S2014-lab5.tex
+++ b/labs/lab5/cs440S2014-lab5.tex
@@ -20,7 +20,23 @@
 \section*{Using Simulation to Evaluate Schedulers}
 
   To learn more about the simulator that we will use to study the scheduling algorithms, please visit the following Web
-  site: \url{http://jimweller.com/jim-weller/jim/java_proc_sched/}.
+  site: \url{http://jimweller.com/jim-weller/jim/java_proc_sched/}. Next, use your terminal window to navigate into the
+  version control repository that is used for sharing source code and type the command {\tt git pull}.  Please change
+  into the {\tt lab5/jimweller/} directory and study the files that are now available. How many files are there? What is
+  their purpose?
+
+  The file called {\tt jobList.dat} contains three lines that share information about the execution characteristics of a
+  process to be scheduled by the operating system.  For instance, the first line in the file contains three numbers: ``10
+  5 1'' with the first value corresponding to the amount of CPU time required by the process and the second and third
+  numbers denoting the time that separates the arrival time and priority of the process, respectively. If you carefully
+  study {\tt jobList.dat} you will notice that the first simulation will only run a total of three processes.
+
+  To run the simulator, you should type {\tt java -jar cpu.jar} in the terminal window.  What do you now see on your
+  screen? To run a simulation, you must first load the {\tt jobList.dat} file.  Then, you should pick a scheduling
+  algorithm, indicate the speed at which the algorithm should be animated, and check whether or not the algorithm should
+  consider process priority. Now, you can click the check box to run the algorithm. (Please note that the ``check box''
+  is really a toggle button that does not render correctly on Ubuntu. If you click this button and the simulator does
+  not run as anticipated, then click it again and see if this starts the animation.)
 
 \section*{Summary of the Required Deliverables}
 
