Finished adding content to the first page of the lab five assignment.

--- a/labs/lab5/cs440S2014-lab5.tex
+++ b/labs/lab5/cs440S2014-lab5.tex
@@ -17,7 +17,7 @@
   designers may use simulators to better understand their trade-offs in efficiency and fairness. In this laboratory
   assignment, you will use a scheduling simulator, implemented by Jim Weller, to evaluate several scheduling algorithms.
 
-\section*{Using Simulation to Evaluate Schedulers}
+\section*{Understanding the Simulation of Schedulers}
 
   To learn more about the simulator that we will use to study the scheduling algorithms, please visit the following Web
   site: \url{http://jimweller.com/jim-weller/jim/java_proc_sched/}. Next, use your terminal window to navigate into the
@@ -37,6 +37,14 @@
   consider process priority. Now, you can click the check box to run the algorithm. (Please note that the ``check box''
   is really a toggle button that does not render correctly on Ubuntu. If you click this button and the simulator does
   not run as anticipated, then click it again and see if this starts the animation.)
+
+  Once you have finished a run of the simulator, you will notice that the simulator reports a wide variety of evaluation
+  metrics. During this laboratory assignment, we will primarily focus on the mean values for response, turnaround, and
+  wait time. Ideally, a scheduler will run a listing of jobs in a manner that yields low values for all of these
+  metrics. Of course, it is also important to find a scheduler that executes processes in a manner that also leads to low
+  standard deviations for these evaluation metrics. What were the metric values for the past run of the simulator?
+
+\section*{Using Simulation to Evaluate Schedulers}
 
 \section*{Summary of the Required Deliverables}
 
