Finished making changes to the second page of the lab 5 assignment.

--- a/labs/lab5/cs440S2014-lab5.tex
+++ b/labs/lab5/cs440S2014-lab5.tex
@@ -68,9 +68,9 @@
   After you have finished running all of the simulations, you should prepare a comprehensive report of your findings.
   Using tables of data and paragraphs of results analysis, the report must highlight and discuss all of your
   experimental results. In advance of talking about your findings, the report should clearly explain how each of the
-  scheduling algorithms actually works. Also, the report should clearly define the evaluation metrics and discuss the
+  scheduling algorithms actually works. Also, the report should formally define the evaluation metrics and discuss the
   threats to the validity of the simulation study. Students are encouraged to write their reports in the
-  \LaTeX~formatting language and use the R language for statistical computation to visualize and analyze their results.
+  \LaTeX~text formatting language and use the R language for statistical computation to visualize and analyze their results.
 
 \section*{Summary of the Required Deliverables}
 
@@ -90,7 +90,7 @@ This assignment invites you to submit printed and signed versions of the followi
 
   \itemsep0in
     \item A clear description the behavior of each of the scheduling algorithms
-    \item A commentary on how the incorporation of priority influences scheduling decisions
+    \item A commentary on how preemption and prioritization influences scheduling decisions
     \item A formal definition of the evaluation metrics used in your study
     \item A description of the job workloads used during the simulations
     \item A detailed analysis of the results from running the scheduler simulations
